fix font not showing up on mobile devices and safari

--- a/client/src/sass/_mediaqueries.scss
+++ b/client/src/sass/_mediaqueries.scss
@@ -61,6 +61,7 @@ $breakpoint-tablet: 1075px;
 
   .login__image {
     position: fixed;
+    background-attachment: fixed;
   }
 
   .form__container {
