--- a/client/src/sass/_resets.scss
+++ b/client/src/sass/_resets.scss
@@ -63,10 +63,7 @@ td {
   padding: 0;
   border: 0;
   outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
   font-size: 100%;
-  font-family: inherit;
   vertical-align: baseline;
 }
 
@@ -76,9 +73,10 @@ li {
   list-style: none;
 }
 button,
-input,
-button::-moz-focus-inner,
-input::-moz-focus-inner {
+input
+// button::-moz-focus-inner,
+// input::-moz-focus-inner
+{
   border: 0;
   padding: 0;
   background-color: transparent;
