--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -13,7 +13,7 @@ $luxora: "Luxora Grotesk", sans-serif;
 
 @font-face {
   font-family: $luxora;
-  src: url("../assets/fonts/LuxoraGrotesk-Bold.ttf") format("truetype");
+  src: url("../assets/fonts/LuxoraGrotesk-Bold.woff2") format("woff2");
   font-weight: normal;
   font-style: normal;
 }
